2008-11-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * Makefile.am:
   Add 'waf' to EXTRA_DIST.
 * src/search.c:
   Capture command's stderr and log it into the Debug messages window
   when a Find in Files search fails.
   Add the project's base_path to the directory list in the Find in
   Files dialog if a project is open.
   Improve layout of the combo box labels in the Find in Files dialog.
 * src/search.c, src/ui_utils.c, src/ui_utils.h:
   Add and use ui_combo_box_prepend_text_once() to add project's
   base_path to the Find in Files dialog even if another project was
   opened.
 * src/build.c, src/callbacks.c, src/editor.c, src/editor.h,
   src/msgwindow.c, src/plugindata.h, src/plugins.c, src/sciwrappers.c,
   src/sciwrappers.h, src/search.c:
   Note: this breaks the plugin API for Editor and Scintilla functions.
   Rename all functions in editor.c and sciwrappers.c which are related
   to indicators for more consistency.
 * src/templates.c:
   Plug little memory leak.
 * src/utils.c:
   When passing NULL to utils_str_replace(), also return NULL
   (fixes broken new file template list).


2008-11-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/search.c:
   Fix wrong highlighting of search results when using 'Mark' in
   the Find dialog.
   Fix possible crash when using the Find in Files dialog.
   Clear previously set search indicators before when using 'Mark' in
   the Find dialog.
 * data/filetypes.common:
   Change the default values for selection fore- and background colour
   to some sane values.


2008-11-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/main.c:
   Prompt the user for whether to move the configuration directory or
   just quit instead. This is useful if the user is already running an
   older binary of Geany and the second instance is newer.
 * src/utils.c, src/editor.c:
   Fix bug with utils_string_replace_all().
   Make utils_str_replace() call utils_string_replace_all() internally