@@ -1,3 +1,9 @@
+2008-11-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/treeviews.c:
+   Refactor with sidebar_add_common_menu_items().
+
+
 2008-11-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * Makefile.am:
